--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^5.2.6",
 		"@types/node": "20.4.1",
 		"@types/react": "18.2.14",
 		"@types/react-dom": "18.2.6",
 		"@types/superagent": "^4.1.18",
-		"antd": "^5.7.0",
+		"antd": "^5.12.1",
 		"eslint": "8.44.0",
 		"eslint-config-next": "13.4.9",
 		"mobx": "^6.9.0",
@@ -27,6 +28,8 @@
 		"typescript": "5.1.6"
 	},
 	"devDependencies": {
+		"@iconify/icons-solar": "^1.2.3",
+		"@iconify/react": "^4.1.1",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.25",
 		"tailwindcss": "^3.3.2"
