--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
 		"@types/react": "18.2.14",
 		"@types/react-dom": "18.2.6",
 		"@types/superagent": "^4.1.18",
-		"antd": "^5.7.0",
+		"antd": "^5.12.1",
 		"eslint": "8.44.0",
 		"eslint-config-next": "13.4.9",
 		"mobx": "^6.9.0",
 		"mobx-react-lite": "^4.0.1",
+		"moment": "^2.29.4",
 		"next": "13.4.9",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
