--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
 		"@types/react-dom": "18.2.6",
 		"@types/superagent": "^4.1.18",
 		"antd": "^5.12.1",
+		"dayjs": "^1.11.10",
 		"eslint": "8.44.0",
 		"eslint-config-next": "13.4.9",
 		"mobx": "^6.9.0",
 		"mobx-react-lite": "^4.0.1",
 		"moment": "^2.29.4",
+		"momment": "^0.0.1",
 		"next": "13.4.9",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
