--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
 		"dayjs": "^1.11.10",
 		"eslint": "8.44.0",
 		"eslint-config-next": "13.4.9",
+		"locale-id": "^1.1.2",
 		"mobx": "^6.9.0",
 		"mobx-react-lite": "^4.0.1",
 		"moment": "^2.29.4",
-		"momment": "^0.0.1",
+		"moment-timezone": "^0.5.43",
 		"next": "13.4.9",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
